[package]
name = "cable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.19.0",features = ["native-tls"] }
tokio-native-tls = "0.3.1"
futures-util = "0.3"
prost = "0.11"
chrono = "0.4.24"
lazy_static = "1.4.0"
warp = "0.3"
bytes = "1"
rlua = { version = "0.19.7", default-features = false, features = ["builtin-lua53"] }
protogen = { path = "../protogen" }
[[bin]]
name="server"
path = "src/bin/server.rs"
