[package]
name = "protogen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11"
prost-build = "0.11"
prost-types = "0.11"
rlua = { version = "0.19.7", default-features = false, features = ["builtin-lua53"] }

[build-dependencies]
prost-build = "0.11"
md5 = "0.7.0"
